--- a/NPL Celebrity Interview Texts Project Part 2.ipynb
+++ b/NPL Celebrity Interview Texts Project Part 2.ipynb
@@ -13,13 +13,21 @@
    "id": "a67c58b2",
    "metadata": {},
    "source": [
-    "For Part 2 of this Project, we use advanced NLP techniques that are designed for analysing Texual data\n",
+    "For Part 2 of this Project, we use rule-based approaches i.e.,  Sentiment Analysis that isdesigned for analysing Texual data. Sentiment Analysis is a subfield of Natural Language Processing (NLP) that deals with identifying and extracting subjective information from text data. It involves using computational techniques to automatically identify and categorize opinions, emotions, evaluations, and attitudes expressed in text as positive, negative, or neutral.\n",
     "\n",
     "**The project Objectives of Part 2 of this project :**\n",
     "\n",
     "**1. Sentiment analysis**\n",
     "\n",
-    "i) We want to identify which interviews are considered to have either strongly positive or negative sentiments. This will help to prioritise such interviews for example Interview text that consists of negative sentiments and understand what was talked about by the interviewers.\n"
+    "i) The goal is to gain insights into what Celebrities are thinking and feeling during their interviews. We also want to identify which interviews are considered to have either strongly positive or negative sentiments. This will help to prioritise such interviews for example Interview text that consists of negative sentiments and try understand what was talked about by the interviewers.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "300eecc6",
+   "metadata": {},
+   "source": [
+    "### Libraries"
    ]
   },
   {
@@ -73,7 +81,6 @@
    "outputs": [],
    "source": [
     "# import dataset \n",
-    "\n",
     "import pickle \n",
     "with open(\"outputs/tokenised_data.pkl\", \"rb\") as fp:\n",
     "    Interview_data = pickle.load(fp)"
@@ -225,7 +232,7 @@
    "id": "7b3f4b68",
    "metadata": {},
    "source": [
-    "*i.e LOVE is an opinionated word and hence subjectivity is higher*"
+    "i.e **LOVE** is an opinionated word and hence subjectivity is higher"
    ]
   },
   {
@@ -237,7 +244,6 @@
    "source": [
     "# use lambda function to find polarity and subjectivity of each routine\n",
     "# We read from the actual corpus 'Origional Text' that has all the words in order\n",
-    "\n",
     "pol = lambda x: TextBlob(x).sentiment.polarity\n",
     "sub = lambda x: TextBlob(x).sentiment.subjectivity\n",
     "\n",
@@ -448,6 +454,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4b0ea9bb",
+   "metadata": {},
+   "source": [
+    "- Based on the plot, we are able to identify Celebrities that are **more Factaul than Opinionated** in their interviews i.e., **Romelu , Michael, Montel, Gary**\n",
+    "\n",
+    "- We also identify Celebrities that were generally **more Positive than Negative** during their interviews i.e., **Alvaro Roberto, Kylian, Keanu**\n",
+    "\n",
+    "- Most Celebrity interviews had a neatral sentiment\n",
+    "\n",
+    "- There are also **OUTLIERS** in our plot, which may be a trigger in wanting to know what was the Viewpoint of the celebrity in their disparity i.e., **Romelu, Montel, David, Alvaro** "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bd30035c",
    "metadata": {},
    "source": [
@@ -459,7 +479,11 @@
    "id": "7e727430",
    "metadata": {},
    "source": [
-    "Here we want to check sentiment over the course of the entire interview for each celebrity. So we will divide each interview text into 10 different folds of texts and run the TextBlob on these 10 pieces of texts for each Celeberity. This will be able to bring insight into how the Celebrity sentiments changed during the course of the interview."
+    "Using the entire interview to analyse sentiment analysis of each celebrity may be misleading as some interviews are too long to capture the real Perception, Feeling, Mood, Attitude of the interview.\n",
+    "\n",
+    "Therefore we will consider checking sentiments over the course of the entire interview for each celebrity. So we will divide each interview text into 10 different folds of texts and run the TextBlob on these 10 pieces of texts for each Celebrity. This will enable us to bring insight into how the sentiments changed during the course of the interview.\n",
+    "\n",
+    "This also helps to identify specifics parts of the interview were Sentimentality of the celebrity is identifed i.e., strongly Positive or strongly negative."
    ]
   },
   {
@@ -561,7 +585,6 @@
    ],
    "source": [
     "# Calculate polarity for each piece of Text\n",
-    "\n",
     "polarity_transcript = []\n",
     "for celebrity_interview in list_pieces:\n",
     "    polarity_piece = []\n",
@@ -823,7 +846,7 @@
    "id": "05c9a69e",
    "metadata": {},
    "source": [
-    "# Analysis for Negative Sentiments.  \n"
+    "# Analysis for Positive Sentiments.  \n"
    ]
   },
   {
@@ -1002,7 +1025,7 @@
    "source": [
     "The results of Sentiment Analysis make sense. We picked 4 Positive and 4 Negative sentiments from foootballers and Hollywood Celebrities interviews to read through what the *Text Blob Library* considered as Positive and Negative texts within the interview period. This analysis allowed us to understand the sentiment of celebrities during the course of their interview.\n",
     "\n",
-    "Also it is easy for us to identify which specific parts of the interview, the celebrity was strongly Positive or Negative based on Polarity score [-1,1].\n",
+    "Also it is easy for us to identify which specific parts of the interview, the celebrity was strongly Positive or Negative based on Polarity score ranging between [-1,1].\n",
     "\n",
     "Sentiment Analysis for this particular project can be used by anyone who may be looking for some story to write or research further about these celebrities. Visualisation of texts using the wordcloud also helps to give clues of what sort of interesting story was talked about in the interview."
    ]
